--- a/css/styles.css
+++ b/css/styles.css
@@ -73,4 +73,41 @@ main>.sidebar {
     margin-right: 0.5rem;
 } 
 
+.header-content-menu ul {
+    display: flex;
+}
+.header-content-menu a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #e9e9e9;
+    display: inline-block;
+    padding: 10px 15px;
+    transition: 300ms ease;
+    position: relative;
+}
+.header-content-menu a::after {
+    display: block;
+    position: absolute;
+    width: calc(100% - 30px);
+    transform: scaleX(0);
+    opacity: 0;
+    height: 3px;
+    left: 15px;
+    bottom: 0;
+    background-color: #fff;
+    transition: 300ms ease;
+    content: "";
+}
+.header-content-menu a:hover {
+    color: #fff;
+}
+.header-content-menu a:hover::after {
+    transform: scaleX(1);
+    opacity: 1;
+}
+
+
+
+
+
 
