--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body, html {
     font-size: 16px;
     margin: 0;
     height: 100%;
+    overflow-x: hidden;
 }
 
 ul,ol,li {
@@ -34,7 +35,9 @@ body {
     position: relative;
     z-index: 1;
 }
-
+.footer {
+    /* width: 101%; */
+}
 main {
     display: flex;
     background-color: #fff;
@@ -44,6 +47,7 @@ main {
 
 main>.section {
     flex-basis: 70%;
+    max-width: 70%;
     padding: 1rem;
 }
 main>.sidebar {
@@ -76,6 +80,9 @@ main>.sidebar {
 .header-content-menu ul {
     display: flex;
 }
+.header-content-menu li {
+    position: relative;
+}
 .header-content-menu a {
     text-decoration: none;
     text-transform: uppercase;
@@ -98,16 +105,74 @@ main>.sidebar {
     transition: 300ms ease;
     content: "";
 }
-.header-content-menu a:hover {
+.header-content-menu li:hover>a, .header-content-menu li.active>a {
     color: #fff;
 }
-.header-content-menu a:hover::after {
+.header-content-menu li:hover>a::after, .header-content-menu li.active>a::after {
     transform: scaleX(1);
     opacity: 1;
 }
+.header-content-menu li.active>a {
+    cursor: default;
+}
+
+.header-content-menu li>ul {
+    opacity: 0;
+    transform: scaleY(0);
+    transform-origin: 0 0;
+    transition: 300ms ease;
+    position: absolute;
+    flex-direction: column;
+    background-color: #678;
+    padding: 10px;
+    left: -10px;
+    border-radius: 3px;
+    white-space: nowrap;
+}
+.header-content-menu li>ul.show {
+    opacity: 1;
+    transform: scaleY(1);
+}
+
+.header-content-menu li.arrow::before {
+    display: block;
+    position: absolute;
+    font-size: 12px;
+    top: calc(50% - 8px);
+    right: 4px;
+    font-family: "fontello";
+    content: '\e801';
+}
 
 
 
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+.gallery figure {
+    flex-basis: 31.333%;
+    max-width: 31.333%;
+    margin: 1%;
+    height: 150px;
+    overflow: hidden;
+}
+.gallery figure a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+}
 
-
+.features {
+    max-width: 100%;
+}
+.features .item {
+    background-color: #e9e9e9;
+    padding: 15px;
+    box-sizing: border-box;
+    box-shadow: rgba(0,0,0,.2) 0 2px 10px;
+    text-align: center;
+}
